--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.2.3
   provider: ^6.0.5
   fluttertoast: ^8.2.2
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
